2013-12-19  Csaba Osztrogonác  <ossy@webkit.org>

        URTBF for GTK after r160853.

        * GNUmakefile.list.am:

2013-12-19  Michał Pakuła vel Rutka  <m.pakula@samsung.com>

        Unreviewed EFL build fix attempt after r160853

        * CMakeLists.txt: Change WebURLResponse.cpp to APIURLResponse.cpp.

2013-12-17  Sam Weinig  <sam@webkit.org>

        [WK2] Rename WebURLResponse to API::URLResponse
        https://bugs.webkit.org/show_bug.cgi?id=125910

        Reviewed by Andreas Kling.

        * Shared/API/c/WKSharedAPICast.h:
        (WebKit::toAPI):
        * Shared/API/c/WKURLResponse.cpp:
        (WKURLResponseGetTypeID):
        * Shared/API/c/mac/WKURLResponseNS.mm:
        (WKURLResponseCreateWithNSURLResponse):
        * Shared/APIURLRequest.cpp:
        * Shared/APIURLResponse.cpp: Copied from Source/WebKit2/Shared/WebURLResponse.cpp.
        (API::URLResponse::URLResponse):
        (API::URLResponse::encode):
        (API::URLResponse::decode):
        * Shared/APIURLResponse.h: Copied from Source/WebKit2/Shared/WebURLResponse.h.
        (API::URLResponse::create):
        * Shared/UserMessageCoders.h:
        (WebKit::UserMessageEncoder::baseEncode):
        (WebKit::UserMessageDecoder::baseDecode):
        * Shared/WebURLResponse.cpp: Removed.
        * Shared/WebURLResponse.h: Removed.
        * UIProcess/WebDownloadClient.cpp:
        (WebKit::WebDownloadClient::didReceiveResponse):
        * UIProcess/WebPolicyClient.cpp:
        (WebKit::WebPolicyClient::decidePolicyForResponse):
        * WebKit2.xcodeproj/project.pbxproj:
        * WebProcess/InjectedBundle/InjectedBundlePagePolicyClient.cpp:
        (WebKit::InjectedBundlePagePolicyClient::decidePolicyForResponse):

2013-12-19  Nick Diego Yamane  <nick.yamane@openbossa.org>

        [CoordinatedGraphics] Regressions in WebView's contentScaleFactor/contentPosition
        https://bugs.webkit.org/show_bug.cgi?id=125943

        Reviewed by Noam Rosenthal.
